Comit Session and Incidence

--- a/app/src/main/res/layout/fragment_grafica.xml
+++ b/app/src/main/res/layout/fragment_grafica.xml
@@ -2,7 +2,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.sergi.cycloguardian.Fragments.FragmentGrafica">
+    tools:context="com.example.sergi.cycloguardian.Fragments.FragmentGraph">
 
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/chart"
+        android:layout_width="match_parent"
+        android:layout_height="350dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="67dp" />
 
 </RelativeLayout>
