--- a/app/src/main/res/layout/fragment_fragment_galery_list.xml
+++ b/app/src/main/res/layout/fragment_fragment_galery_list.xml
@@ -5,13 +5,21 @@
     android:layout_height="match_parent"
     tools:context="com.example.sergi.cycloguardian.Fragments.FragmentGaleryList">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="381dp"
-        android:layout_height="381dp"
-        android:layout_marginTop="59dp"
-        android:scrollbars="vertical"
+    <ImageView
+        android:id="@+id/selectedImageView"
+        android:layout_width="fill_parent"
+        android:layout_height="220dp"
+        android:layout_marginTop="74dp"
+        android:scaleType="fitXY"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+    <Gallery
+        android:id="@+id/simpleGallery"
+        android:layout_width="fill_parent"
+        android:layout_height="218dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/selectedImageView" />
 
 </android.support.constraint.ConstraintLayout>
