--- a/app/src/main/res/layout/fragment_fragment_galery_list.xml
+++ b/app/src/main/res/layout/fragment_fragment_galery_list.xml
@@ -8,8 +8,8 @@
     <ImageView
         android:id="@+id/selectedImageView"
         android:layout_width="fill_parent"
-        android:layout_height="220dp"
-        android:layout_marginTop="74dp"
+        android:layout_height="236dp"
+        android:layout_marginTop="58dp"
         android:scaleType="fitXY"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -18,8 +18,36 @@
     <Gallery
         android:id="@+id/simpleGallery"
         android:layout_width="fill_parent"
-        android:layout_height="218dp"
+        android:layout_height="146dp"
+        android:layout_marginTop="19dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/selectedImageView" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewDir" />
+
+    <TextView
+        android:id="@+id/textViewName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="302dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="116dp"
+        android:layout_marginTop="302dp"
+        app:layout_constraintStart_toEndOf="@+id/textViewName"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewDir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="107dp"
+        android:layout_marginTop="321dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
