--- a/app/src/main/res/menu/settings.xml
+++ b/app/src/main/res/menu/settings.xml
@@ -23,7 +23,7 @@
 
     <item
         android:id="@+id/linHardware"
-        android:title="Link Arduino">
+        android:title="Link Device">
     </item>
 
 </menu>
